GA for Knapsack is done